commit translated contents

--- a/Apps/TOC.yml
+++ b/Apps/TOC.yml
@@ -41,6 +41,8 @@
           href: teams/asana.md
         - name: askR.ai
           href: teams/askrai.md
+        - name: Assembly
+          href: teams/carrothr-inc-assembly.md
         - name: AtBot
           href: teams/h3-solutions-inc-atbot.md
         - name: atSpoke
@@ -65,8 +67,12 @@
           href: teams/biggerbrains-brainbot.md
         - name: Breakthru
           href: teams/breakthru.md
+        - name: Sondagem Brilhante
+          href: teams/chat-apps-llc-bright-poll.md
         - name: Brightidea
           href: teams/brightidea.md
+        - name: Transmitir
+          href: teams/cerkl-broadcast.md
         - name: Bot de Adoção C.AI
           href: teams/contexxtai-cai-adoption-bot.md
         - name: BOT de Calendário
@@ -77,6 +83,8 @@
           href: teams/chimu-software-catchem.md
         - name: Centrical
           href: teams/biz-effective-centrical.md
+        - name: ChurnZero
+          href: teams/churnzero.md
         - name: Cisco Webex Meetings
           href: teams/cisco-webex-meetings.md
         - name: Clever Ads
@@ -199,6 +207,8 @@
           href: teams/iglobe-mipa-your-personal-assistant.md
         - name: monday.com
           href: teams/mondaycom.md
+        - name: Mover o trabalho para frente com Jira
+          href: teams/move-work-forward-with-jira.md
         - name: MURAL
           href: teams/mural.md
         - name: Mybys
@@ -235,6 +245,8 @@
           href: teams/piazza.md
         - name: Calendário de Equipe do Planyway
           href: teams/rubius-planyway-team-calendar.md
+        - name: PlayQuiz - Aprende e Juega
+          href: teams/teamschamp-playquiz-aprende-and-juega.md
         - name: Polly
           href: teams/polly.md
         - name: Prezi Video
@@ -249,6 +261,8 @@
           href: teams/unscrambl-qbo.md
         - name: qExperiência do Líder de Mudança
           href: teams/qchange-software-solution-inc-leader-experience.md
+        - name: Qualificado
+          href: teams/qualified.md
         - name: Qubie
           href: teams/qubie.md
         - name: Quicklinks
