--- a/Apps/TOC.yml
+++ b/Apps/TOC.yml
@@ -267,6 +267,8 @@
           href: teams/empuls.md
         - name: EngageWith
           href: teams/springrole-engagewith.md
+        - name: eTeamer
+          href: teams/missing-eteamer.md
         - name: Evernote
           href: teams/evernote.md
         - name: Evocom
@@ -525,6 +527,8 @@
           href: teams/talview-inc-interviews.md
         - name: TaskList
           href: teams/limestat-inc-tasklist.md
+        - name: TeaMe Health Check Bot
+          href: teams/missing-teame-health-check-bot.md
         - name: TeamGether
           href: teams/effency-teamgether.md
         - name: Teamhood
@@ -622,34 +626,34 @@
           href: word/jiji-technologies-private-limited-wunder365-for-office.md
         - name: xLaw - sistema de gerenciamento de conhecimento
           href: word/evertn-xlaw-knowledge-management-system.md
-    - name: Aplicativos Web
-      href: web/web-apps.md
+    - name: Aplicativos SaaS
+      href: saas/saas-apps.md
       items:
         - name: Selador de Conteúdo
-          href: web/officeatwork-content-chooser.md
+          href: saas/officeatwork-content-chooser.md
         - name: Designer
-          href: web/officeatwork-designer.md
+          href: saas/officeatwork-designer.md
         - name: IGlobe CRM Office 365 para Microsoft 365
-          href: web/iglobe-crm-office-365-for-microsoft.md
+          href: saas/iglobe-crm-office-365-for-microsoft.md
         - name: iPlanner Pro Office 365
-          href: web/iglobe-iplanner-pro-office-365.md
+          href: saas/iglobe-iplanner-pro-office-365.md
         - name: LMS365
-          href: web/elearningforce-international-aps-lms365.md
+          href: saas/elearningforce-international-aps-lms365.md
         - name: MIPA - Meu Assistente Pessoal Inteligente
-          href: web/iglobe-mipa-my-intelligent-personal-assistant.md
+          href: saas/iglobe-mipa-my-intelligent-personal-assistant.md
         - name: Office2SharePoint
-          href: web/iglobe-office2sharepoint.md
+          href: saas/iglobe-office2sharepoint.md
         - name: Priority Matrix
-          href: web/appfluence-inc-priority-matrix.md
+          href: saas/appfluence-inc-priority-matrix.md
         - name: SalesTim
-          href: web/salestim.md
+          href: saas/salestim.md
         - name: Template Chooser
-          href: web/officeatwork-template-chooser.md
+          href: saas/officeatwork-template-chooser.md
         - name: Navegador do Selador de Modelo
-          href: web/officeatwork-template-chooser-browser.md
+          href: saas/officeatwork-template-chooser-browser.md
         - name: Carregador
-          href: web/officeatwork-uploader.md
+          href: saas/officeatwork-uploader.md
         - name: Verificador
-          href: web/officeatwork-verifier.md
+          href: saas/officeatwork-verifier.md
         - name: Assistente
-          href: web/officeatwork-wizard.md
+          href: saas/officeatwork-wizard.md
